src/App.css
body {
  font-family: 'Poppins';
}
#background {
  background-image: url('./assets/background.png');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: 100% 100%;
  height: 87vh;

}
.form-control,.form-control:focus {
  display: block;
  width: 100%;
  color:white !important;
  height: calc(1.5em + .75rem + 2px);
  padding: .375rem .75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  /* color: #495057; */
  background-color: #42427c !important;
  background-clip: padding-box;
  border: 1px solid #43437d !important;
  border-radius: .25rem;
  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
  box-shadow: none !important;
}
button:focus {
  outline: none !important;
}
@media screen and (max-width:600px) {
  #mainHeader,#boxes {
    text-align: center;
    text-align-last: center;
  }
  #boxWrapper {
    margin-left: 1.5vh !important;
  }
  #formWrapper {
    margin-top: 2rem !important;
    max-width: 100%;
    flex-basis: 100%;
    padding: 0 1rem;
  }
  #headerContent {
    margin-top: 5rem !important;
  }
  #boxes {
    margin-top: 5rem !important;
  }
  #background {
    background-image: url('./assets/background.png');
    background-repeat: no-repeat;
    height: 106vh;
  }
  #textfield {
    max-width: 82.666667%;
  }
  #title {
    justify-content: center !important;
  }
  #contact {
    justify-content: flex-end !important;
  }
  #about {
    justify-content: center !important;
  }
  #navWrapper {
    padding-top: 1rem;
  }
}
#textfield {
  max-width: 69.666667%;
}

